[gd_scene load_steps=3 format=3 uid="uid://bxd86eyoj0bkq"]

[ext_resource type="Script" uid="uid://ib2w0y6fq5uf" path="res://Scripts/PauseMenu.gd" id="1_qwhev"]
[ext_resource type="FontFile" uid="uid://ic6ld6015c20" path="res://Assets/images/rainyhearts.ttf" id="2_5w4ur"]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource("1_qwhev")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.00392157)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5w4ur")
theme_override_font_sizes/font_size = 90
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5w4ur")
theme_override_font_sizes/font_size = 90
text = "Restart"

[node name="LevelSelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5w4ur")
theme_override_font_sizes/font_size = 90
text = "Level Select"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5w4ur")
theme_override_font_sizes/font_size = 90
text = "Main Menu"

[node name="QuitGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_5w4ur")
theme_override_font_sizes/font_size = 90
text = "Quit Game"
